fix: table background color on dark mode

--- a/assets/index.css
+++ b/assets/index.css
@@ -550,9 +550,8 @@ ul.cards li {
 /* Table */
 
 table {
-  --color-code-background: var(--color-light);
-  --color-code-color: var(--color-text);
-  background-color: var(--color-white);
+
+  background-color: var(--color-background);
   border: 1px solid var(--color-border);
   border-collapse: separate;
   border-spacing: 0;
